[tool.poetry]
name = "Bitcoin-Brute-Force-Wallet-BTC-Earn-And-Donate"
version = "0.1.0"
description = ""
authors = ["Donate: 1mRae8XtcbfHth9R7WFn5EytBT3UiZUAR <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bitcoinaddress = "^0.1.5"
rich = "^10.15.2"
pandas = "^1.4.0"
ecdsa = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
